src/searchable.scss
.searchable {
  margin-top: 25px;
  position: relative;

  &::before {
    content: attr(data-sb-icon, 'icon');
    cursor: pointer;
    height: 25px;
    min-width: 25px;
    position: absolute;
    right: 0;
    text-align: center;
    top: -25px;
  }

  &.sb-left::before {
    left: 0;
    right: auto;
  }

  &:hover::before {
    transform: scale(1.1);
  }

  tbody {
    position: relative;
    z-index: 2;
  }

  thead {
    &::after {
      content: attr(data-sb-empty, 'empty');
      display: table-row;
      opacity: 0.7;
      pointer-events: none;
      position: absolute;
      text-align: center;
      width: 100%;
      z-index: 1;
    }

    input[type='search'] {
      box-sizing: border-box;
      width: 100%;
    }
  }
}

